--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -5,9 +5,10 @@
 .archive {
   margin-top: 1em;
   margin-bottom: 2em;
+  margin-left: 1em;
 
   @include breakpoint($large) {
-    float: inline-end;
+    float: left;
     width: calc(100% - #{$right-sidebar-width-narrow});
     padding-inline-end: $right-sidebar-width-narrow;
   }
